# gitjobs

./: .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md
.github/: ci.yml  dependabot.yml
.github/workflows/: build-images.yml  ci.yml  e2e.yml
charts/gitjobs/: Chart.yaml  values.yaml
charts/gitjobs/templates/: _helpers.tpl  server_deployment.yaml  server_secret.yaml  syncer_cronjob.yaml  syncer_secret.yaml
database/: Dockerfile
database/migrations/: Dockerfile  insert_test_data.sql  migrate.sh
database/migrations/functions/: 001_load_functions.sql
database/migrations/schema/: 0001_initial.sql  0002_image_created_by.sql  0002_unique_application.sql  0003_email_verification.sql  0003_job_tz_interval.sql  0004_notification.sql  0004_salary_usd_year.sql  (+14 more)
docs/: about.md
gitjobs-server/: Cargo.toml  Dockerfile  askama.toml  build.rs
gitjobs-server/src/: auth.rs  config.rs  event_tracker.rs  main.rs  notifications.rs  router.rs  views.rs  workers.rs
gitjobs-server/src/db/: auth.rs  common.rs  event_tracker.rs  img.rs  jobboard.rs  misc.rs  mod.rs  notifications.rs  views.rs  workers.rs
gitjobs-server/src/db/dashboard/: employer.rs  job_seeker.rs  mod.rs  moderator.rs
gitjobs-server/src/handlers/: auth.rs  common.rs  error.rs  extractors.rs  img.rs  misc.rs  mod.rs
gitjobs-server/src/handlers/dashboard/: mod.rs
gitjobs-server/src/handlers/dashboard/employer/: applicants.rs  applications.rs  employers.rs  home.rs  jobs.rs  mod.rs  team.rs
gitjobs-server/src/handlers/dashboard/job_seeker/: applications.rs  home.rs  mod.rs  profile.rs
gitjobs-server/src/handlers/dashboard/moderator/: home.rs  jobs.rs  mod.rs
gitjobs-server/src/handlers/jobboard/: about.rs  embed.rs  home.rs  jobs.rs  mod.rs  stats.rs
gitjobs-server/src/img/: db.rs  mod.rs
gitjobs-server/src/templates/: auth.rs  filters.rs  helpers.rs  misc.rs  mod.rs  notifications.rs  pagination.rs
gitjobs-server/src/templates/dashboard/: mod.rs
gitjobs-server/src/templates/dashboard/employer/: applicants.rs  applications.rs  employers.rs  home.rs  jobs.rs  mod.rs  team.rs
gitjobs-server/src/templates/dashboard/job_seeker/: applications.rs  home.rs  mod.rs  profile.rs
gitjobs-server/src/templates/dashboard/moderator/: home.rs  jobs.rs  mod.rs
gitjobs-server/src/templates/jobboard/: about.rs  embed.rs  home.rs  jobs.rs  mod.rs  stats.rs
gitjobs-server/src/templates/notifications/: mod.rs
gitjobs-server/src/templates/testdata/: job_contractor.golden  job_full_details.golden  job_internship.golden  job_part_time.golden  job_remote_no_location.golden  job_with_fixed_salary.golden  job_with_location_hybrid.golden  job_with_location_onsite.golden  job_with_location_remote.golden  job_with_open_source.golden  job_with_salary_min_only.golden  job_with_salary_range.golden  job_with_seniority.golden  job_with_skills.golden  job_with_upstream_commitment.golden  minimal_job.golden
gitjobs-server/static/css/: styles.src.css
gitjobs-server/static/js/: .prettierrc.yaml
gitjobs-server/static/js/common/: alerts.js  common.js  data.js  dropdown.js  header.js  input-range.js  lit-wrapper.js  litWrapper.js  locations.js  markdown-editor.js  members.js  multiselect.js  projects.js  search-location.js  search-projects.js  searchable-filter.js
gitjobs-server/static/js/dashboard/: base.js
gitjobs-server/static/js/dashboard/common/: dashboard-search.js
gitjobs-server/static/js/dashboard/employer/: jobs.js
gitjobs-server/static/js/dashboard/jobs/: list.js
gitjobs-server/static/js/dashboard/jobseeker/: certifications.js  education.js  experience.js  form.js  projects.js
gitjobs-server/static/js/jobboard/: filters.js  job_section.js  stats.js
gitjobs-server/static/js/misc/: members.js  projects.js
gitjobs-server/static/styles/: index.css
gitjobs-server/templates/: base.html  common_base.html  common_header.html  footer.html  header.html  macros.html  navigation_links.html
gitjobs-server/templates/auth/: log_in.html  sign_up.html  update_user.html
gitjobs-server/templates/common/: locations.html
gitjobs-server/templates/dashboard/: dashboard_base.html  dashboard_base_moderator.html  dashboard_macros.html  macros.html
gitjobs-server/templates/dashboard/employer/: home.html
gitjobs-server/templates/dashboard/employer/applicants/: list.html
gitjobs-server/templates/dashboard/employer/applications/: list.html
gitjobs-server/templates/dashboard/employer/employers/: add.html  initial_setup.html  update.html
gitjobs-server/templates/dashboard/employer/jobs/: add.html  list.html  preview.html  preview_modal.html  update.html
gitjobs-server/templates/dashboard/employer/teams/: invitations_list.html  members_list.html
gitjobs-server/templates/dashboard/job_seeker/: home.html
gitjobs-server/templates/dashboard/job_seeker/applications/: list.html
gitjobs-server/templates/dashboard/job_seeker/profile/: preview.html  update.html
gitjobs-server/templates/dashboard/moderator/: home.html  live_jobs.html  moderator_macros.html  pending_jobs.html
gitjobs-server/templates/jobboard/: home.html
gitjobs-server/templates/jobboard/about/: page.html
gitjobs-server/templates/jobboard/embed/: jobs_page.html  page.html
gitjobs-server/templates/jobboard/jobs/: explore_section.html  job.html  job_section.html  jobs.html  jobs_macros.html  navigation_links.html  results_section.html
gitjobs-server/templates/jobboard/stats/: page.html
gitjobs-server/templates/misc/: job_preview.html  locations.html  members.html  not_found.html  preview_modal.html  projects.html  user_menu_section.html
gitjobs-server/templates/notifications/: base.html  email_macros.html  email_verification.html  slack_job_published.md  team_invitation.html
gitjobs-syncer/: Cargo.toml  Dockerfile
gitjobs-syncer/src/: config.rs  db.rs  main.rs  syncer.rs
ojb-server/: Cargo.toml  Dockerfile  rinja.toml
ojb-server/src/: auth.rs  config.rs  db.rs  main.rs  router.rs
ojb-server/templates/: .djlintrc  base.html  common.html  footer.html  header.html
tests/e2e/: playwright.config.ts  playwright.spec.ts
(+88 files in other folders)
