[workspace]
resolver = "2"
members = [
    "gitjobs-server"
]

[workspace.package]
version = "0.0.1"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.97"
askama = { version = "0.13.0", features = ["serde_json"] }
async-trait = "0.1.88"
axum = { version = "0.8.3", features = ["macros", "multipart"] }
axum-login = "0.17.0"
axum-extra = { version = "0.10.1", features = ["form"] }
axum-messages = "0.8.0"
cached = { version = "0.55.1", features = ["async"] }
clap = { version = "4.5.34", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
chrono-tz = { version = "0.10.3", features = ["serde"] }
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
emojis = "0.6.4"
figment = { version = "0.10.19", features = ["yaml", "env"] }
human_format = "1.1.0"
image = "0.25.6"
lettre = { version = "0.11.15", default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "tokio1-rustls-tls"] }
markdown = "1.0.0-alpha.23"
mime_guess = "2.0.5"
minify-html = "0.16.4"
num-format = "0.4.4"
oauth2 = "5.0.0"
openidconnect = { version = "4.0.0", features = ["accept-rfc3339-timestamps"] }
openssl = { version = "0.10.71", features = ["vendored"] }
palette = "0.7.6"
password-auth = "1.0.0"
postgres-openssl = "0.5.1"
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
rust-embed = "8.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_html_form = "0.2.7"
serde_json = "1.0.140"
serde_qs = { version = "0.14.0", features = ["axum"] }
serde_with = "3.12.0"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.44.1", features = [
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-postgres = { version = "0.7.13", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-time-0_3",
    "with-uuid-1",
] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["auth", "fs", "set-header", "trace"] }
tower-sessions = { version = "0.14.0", features = ["signed"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
which = "7.0.2"
