[package]
name = "gitjobs-server"
description = "GitJobs server"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
askama = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-login = { workspace = true }
axum-extra = { workspace = true }
axum-messages = { workspace = true }
cached = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
deadpool-postgres = { workspace = true }
emojis = { workspace = true }
figment = { workspace = true }
image = { workspace = true }
lettre = { workspace = true }
markdown = { workspace = true }
mime_guess = { workspace = true }
minify-html = { workspace = true }
num-format = { workspace = true }
oauth2 = { workspace = true }
openidconnect = { workspace = true }
openssl = { workspace = true }
palette = { workspace = true }
password-auth = { workspace = true }
postgres-openssl = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_html_form = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }
tokio-util = { version = "0.7.13", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-segmentation = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
