[package]
name = "gitjobs-syncer"
description = "GitJobs foundations members and projects synchronization tool"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
deadpool-postgres = { workspace = true }
figment = { workspace = true }
futures = { workspace = true }
openssl = { workspace = true }
postgres-openssl = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
